--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "path": "^0.12.7",
     "puppeteer": "^21.3.8"
   }
 }
