--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "path": "^0.12.7",
-    "puppeteer": "^21.3.8"
+    "puppeteer": "^21.3.8",
+    "uuid": "^9.0.1"
   }
 }
